# wasserstein

./: .gitignore  README.md  comparison_joint_vs_simple.py  experiment_analysis_script.py  feature_mass_analysis.ipynb  feature_mass_analysis_components.csv  feature_mass_analysis_summary.csv  joint_vs_simple_comparison_results.csv  joint_vs_simple_comparison_results_dynamic.csv  mass_preservation_targets_analysis.csv  parameter_tuning_regm.py  pyproject.toml  todo.md
SimpleDecent/: deconv_simplex.py  final.ipynb  find_optimal_p_params.py  heatmaps_close.py  heatmaps_mix.py  hubris.txt  marginals.py  mirror_descent_convergence.ipynb  nmr_spectrum.py  optimal_p_heatmap.py  ot_sparse.py  p_curves.py  pretty_plots.ipynb  simple_decent.ipynb  sparse_test.ipynb  spectrum.py  standard.txt  test_dist.ipynb  test_utils.py  testing.ipynb  trash_decent.py  unbalanced_optimal_transport.ipynb
experiment_plots/experiment_1/: parameter_results.csv
experiment_plots/experiment_10/: parameter_results.csv
experiment_plots/experiment_11/: parameter_results.csv
experiment_plots/experiment_2/: parameter_results.csv
experiment_plots/experiment_3/: parameter_results.csv
experiment_plots/experiment_4/: parameter_results.csv
experiment_plots/experiment_5/: parameter_results.csv
magnetstein_data/: AvRE_calculation.ipynb  binsearch_estimation.py  estimation.ipynb  estimation_simple_wasserstein.py  joint_md_test.py  l1_error_heatmap.py  simple_decent.ipynb  simple_wasserstein_descent.py
wasserstein/: __init__.py  nmr_spectrum.py  spectrum.py
(+52 files in other folders)
