[tool.poetry]
name = "wasserstein"
version = "0.1.0"
description = "Wasserstein project"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
isospecpy = ">=2.2.3,<3.0.0"
numpy = ">=2.2.4,<3.0.0"
scipy = ">=1.15.2,<2.0.0"
pulp = ">=3.0.2,<4.0.0"
ipykernel = ">=6.29.5,<7.0.0"
tqdm = ">=4.67.1,<5.0.0"
matplotlib = ">=3.10.1,<4.0.0"
pandas = ">=2.2.3,<3.0.0"
pot = ">=0.9.5,<0.10.0"
torch = ">=2.6.0,<3.0.0"
optimal-transport = "^0.0.1"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
